--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1337,16 +1337,16 @@
 
         for(var i = 1; i <= amount_bms; i++)
         {
-            //active_bm.push(JSON.parse(rest_get_historical_bm(document.getElementById("additional-info_" + i).getAttribute("base_bm"), force)).slice(-10));
+            active_bm.push(JSON.stringify(JSON.parse(rest_get_historical_bm(document.getElementById("additional-info_" + i).getAttribute("base_bm"), force)).slice(-10)));
 
-            active_bm.push(rest_get_historical_bm(document.getElementById("additional-info_" + i).getAttribute("base_bm"), force));
+            //active_bm.push(rest_get_historical_bm(document.getElementById("additional-info_" + i).getAttribute("base_bm"), force));
             
             // console.log(JSON.parse(rest_get_historical_bm(document.getElementById("additional-info_" + i).getAttribute("base_bm"), force)).slice(-10));
             // console.log(JSON.parse(active_bm[i - 1]).slice(-10));
             //active_bm[i - 1] = JSON.parse(active_bm[i - 1]).slice(-10);
         }
 
-        console.log(JSON.stringify(active_bm));
+        console.log(active_bm);
         
         return active_bm;
     }
