#67 first tests with potential and show n datapoints

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -961,6 +961,8 @@
     // #67 newly added func
     function show_potential(num_bm)
     {
+        console.log(document.getElementById('n-datapoints-to-show').value);
+
         // get the send bms
         var active_bms = get_active_bms(false);
         // Amount of elements in the currentyl active bms
