--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -489,8 +489,6 @@
         {
             potential_values.push(document.getElementById("additional-info_" + i).querySelector("#value_value").value);
         }
-
-        console.log("save_potential_values - " + potential_values);
     }
 
     // #67 Newly added func
@@ -504,8 +502,6 @@
                 document.getElementById("additional-info_" + i).querySelector("#value_value").value = potential_values[i - 1];
             
         }
-
-        //console.log("re_add_potential_values - " + potential_values);
     }
 
 
@@ -1347,9 +1343,7 @@
             add_html_input(true);
         }
 
-        console.log("CALLING re_add_potential_values")
         re_add_potential_values();
-        console.log(potential_values)
 
         active_bm = [];
 
@@ -1502,7 +1496,7 @@
         }
         else
         {
-            console.log("going to clear: " + bm_id)
+            //console.log("going to clear: " + bm_id)
             // Remove only the datasets defined in the function call
             chart.data.datasets = chart.data.datasets.filter(function(obj) {
                 return (obj.label != 'potential for ' + bm_id); 
