--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1448,28 +1448,37 @@
     function parse_base_bm(json_bm, bm_name)
     {
         //  to_dispay += '<font color="green">Reps: ' + json.values[i].reps + "</font><br>";
-        var to_dispay = "<h2>" + bm_name.toUpperCase() + " [" + json_bm[0].uom + "]" + " - " + json_bm[0].tod + "</h2><br><br>";
+        let to_dispay = "<h2>" + bm_name.toUpperCase() + " [" + json_bm[0].uom + "]" + " - " + json_bm[0].tod + "</h2><br><br>";
 
-        for(var i = 0; i < json_bm.length; i++)
+        let n_datapoints_to_show = document.getElementById("n-datapoints-to-show").value > 0 ? document.getElementById("n-datapoints-to-show").value : Infinity;
+
+        console.log(n_datapoints_to_show)
+
+        for(let i = 0; i < json_bm.length; i++)
         {
-            var date = new Date(json_bm[i].created).toUTCString()
-            to_dispay += (i + 1) + ". Entry on: " + date.split(' ').slice(1, 4).join(' ') + "<br>";
+            if(i > json_bm.length - n_datapoints_to_show)
+            {
+                let date = new Date(json_bm[i].created).toUTCString()
+                to_dispay += (i + 1) + ". Entry on: " + date.split(' ').slice(1, 4).join(' ') + "<br>";
 
-            if(i > 0)
-                if(json_bm[i].value > json_bm[i - 1].value)
+                if(i > 0)
                 {
-                    to_dispay += '<font color="green">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>";
-                }    
-                else if(json_bm[i].value < json_bm[i - 1].value)
-                {
-                    to_dispay += '<font color="red">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>"; 
+                    if(json_bm[i].value > json_bm[i - 1].value)
+                    {
+                        to_dispay += '<font color="green">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>";
+                    }    
+                    else if(json_bm[i].value < json_bm[i - 1].value)
+                    {
+                        to_dispay += '<font color="red">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>"; 
+                    }
+                    else
+                    {
+                        to_dispay += '<font color="white">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>"; 
+                    }
                 }
                 else
-                {
                     to_dispay += '<font color="white">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>"; 
-                }
-            else
-                to_dispay += '<font color="white">' + json_bm[i].value + (json_bm[i].note.length != 0 ? "<br>Note:" + json_bm[i].note : "") + "</font><br>"; 
+            }
         } 
         
         return to_dispay;
