#67 set cookie on setting reset

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -2061,6 +2061,7 @@
         simplify_ui();
 
         document.getElementById("n-datapoints-to-show").value = '';
+        set_cookie("n_datapoints", 90);
         set_datapoints_chart("", true);
     }
 
