#67 updated reference name of body input tool

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -86,7 +86,7 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>-->
     <script src="js/sweetalert.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
-    <script src="http://jakob.ml:8081/auth/js/keycloak.js"></script> 
+    <script src="http://jakob.ml/auth/js/keycloak.js"></script> 
     <script>
         
         var keycloak;
@@ -187,7 +187,7 @@
 <div id="mySidenav" class="sidenav">
     <button id="open-nav-button" onclick="closeNav()"                      class="button" style="float:right; float:top; margin-right: 10%; margin-bottom: 15%" ><i class="fas fa-bars"></i></a>
     <button id="stats-button" onclick="window.location.href='stats.html'"  class="button" style="top: 10px; width:80%; margin-left: 10%; "><i class="fas fa-chart-line">       </i> Stats</button>
-    <button id="bm-button" onclick="window.location.href='bm_it.html'"     class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-weight"></i>       </i> BM-IT</button>    
+    <button id="bm-button" onclick="window.location.href='bm_it.html'"     class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-weight"></i>       </i> Body Tracker</button>    
     <button onclick="receivePlanfromDB(false)"                             class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 30px"><i class="fas fa-spinner">          </i> Load Plan</button>
     <button onclick="check_allowed_to_add_plan()"                          class="button" style="top: 10px; width:80%; margin-left: 10%;">                 <i class="fas fa-plus-circle">      </i> New Plan</button>
     <button onclick="delete_plan(-1, false)"                               class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 20%;"><i class="fas fa-trash">            </i> Delete Plans</button>
