--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -29,10 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
 
-
-
-
-    <script src="http://jakob.ml:8081/auth/js/keycloak.js"></script> 
+    <script src="http://jakob.ml/auth/js/keycloak.js"></script> 
     <script>
         var keycloak;
 
